@@ -1,3 +1,5 @@
+    - allow arbitrary date strings to date_format, html_select_date and
+      html_select_time (Monte)
 Version 1.3.2
 -------------
     - fixed a bug that caused some nested includes to loop infinitely. (Andrei)
